tests/errors/stud/bad-arithmetics.c


void main()
{
	int x = ; 
	+ 23;        //bad arithmetics
	printid(x);
}